# Chunky

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
include/: chunky.h
scripts/: clang_build.sh  msvs_build_and_go.bat  win_build_and_go.bat
src/: blocks.c  chunks.c  chunky_ctx.h  components.c  entities.c  lifetime.c  recorders.c
test/: imgui_app.c  ubench.c  ubench_components.c  utest_blocks.c  utest_chunks.c  utest_components.c  utest_entities.c  utest_lifetime.c  utest_recorder.c
